--- a/deploy/csi-sfs-controller.yaml
+++ b/deploy/csi-sfs-controller.yaml
@@ -117,7 +117,7 @@ spec:
             - --v=5
           volumeMounts:
             - mountPath: /csi
-              name: plugin-dir
+              name: socket-dir
       volumes:
         - name: socket-dir
           emptyDir: {}
