--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -36,10 +36,22 @@ spec:
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
+        - name: csi-attacher
+          image: quay.io/k8scsi/csi-attacher:v2.0.0
+          args:
+            - "-v=5"
+            - "--csi-address=$(ADDRESS)"
+          env:
+            - name: ADDRESS
+              value: /csi/csi.sock
+          volumeMounts:
+            - mountPath: /csi
+              name: socket-dir
         - name: sfs-csi-plugin
           image: docker.io/zhenguo/sfs-csi-plugin:latest
           args:
-            - "--v=5"
+            - "--v=2"
+            - "--logtostderr"
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--nodeid=$(NODE_ID)"
             - "--cloud-config=$(CLOUD_CONFIG)"
