--- a/deploy/sfs-csi-plugin/kubernetes/rbac-csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/rbac-csi-sfs-controller.yaml
@@ -67,6 +67,9 @@ rules:
   - apiGroups: ["storage.k8s.io"]
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch", "create", "update", "patch"]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["volumeattachments/status"]
+    verbs: ["patch"]
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "list", "watch", "create", "update", "patch"]
