--- a/examples/sfs-csi-plugin/kubernetes/pvc.yaml
+++ b/examples/sfs-csi-plugin/kubernetes/pvc.yaml
@@ -7,5 +7,5 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10G
+      storage: 10Gi
   storageClassName: sfs.csi.huaweicloud.com 
