--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-driver.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-driver.yaml
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
-  name: sfs-turbo.csi.huaweicloud.com
+  name: sfsturbo.csi.huaweicloud.com
 spec:
   attachRequired: true
   podInfoOnMount: true
