--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
@@ -2,18 +2,18 @@
 kind: DaemonSet
 apiVersion: apps/v1
 metadata:
-  name: csi-sfs-turbo-node
+  name: csi-sfsturbo-node
   namespace: kube-system
 spec:
   selector:
     matchLabels:
-      app: csi-sfs-turbo-node
+      app: csi-sfsturbo-node
   template:
     metadata:
       labels:
-        app: csi-sfs-turbo-node
+        app: csi-sfsturbo-node
     spec:
-      serviceAccountName: csi-sfs-turbo-node-sa
+      serviceAccountName: csi-sfsturbo-node-sa
       nodeSelector:
         kubernetes.io/os: linux
       priorityClassName: system-node-critical
@@ -39,19 +39,19 @@ spec:
           lifecycle:
             preStop:
               exec:
-                command: ["/bin/sh", "-c", "rm -rf /registration/sfs-turbo.csi.huaweicloud.com-reg.sock /csi/csi.sock"]
+                command: ["/bin/sh", "-c", "rm -rf /registration/sfsturbo.csi.huaweicloud.com-reg.sock /csi/csi.sock"]
           env:
             - name: ADDRESS
               value: /csi/csi.sock
             - name: DRIVER_REG_SOCK_PATH
-              value: /var/lib/kubelet/plugins/sfs-turbo.csi.huaweicloud.com/csi.sock
+              value: /var/lib/kubelet/plugins/sfsturbo.csi.huaweicloud.com/csi.sock
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
             - name: registration-dir
               mountPath: /registration
-        - name: sfs-turbo
-          image: registry.eu-west-0.prod-cloud-ocb.orange-business.com/official/sfsturbo-csi-plugin:v1.8
+        - name: sfsturbo
+          image: zhenguo/sfsturbo-csi-plugin:latest
           args:
             - "--v=2"
             - "--logtostderr"
@@ -78,7 +78,7 @@ spec:
             - name: CSI_ENDPOINT
               value: unix://csi/csi.sock
             - name: CLOUD_CONFIG
-              value: /etc/sfs-turbo/cloud-config
+              value: /etc/sfsturbo/cloud-config
           securityContext:
             privileged: true
           volumeMounts:
@@ -87,11 +87,11 @@ spec:
             - mountPath: /var/lib/kubelet/
               mountPropagation: Bidirectional
               name: mountpoint-dir
-            - mountPath: /etc/sfs-turbo/
-              name: sfs-turbo-config
+            - mountPath: /etc/sfsturbo/
+              name: sfsturbo-config
       volumes:
         - hostPath:
-            path: /var/lib/kubelet/plugins/sfs-turbo.csi.huaweicloud.com
+            path: /var/lib/kubelet/plugins/sfsturbo.csi.huaweicloud.com
             type: DirectoryOrCreate
           name: socket-dir
         - hostPath:
@@ -103,7 +103,7 @@ spec:
             type: DirectoryOrCreate
           name: registration-dir
         - hostPath:
-            path: /etc/sfs-turbo/
+            path: /etc/sfsturbo/
             type: Directory
-          name: sfs-turbo-config
+          name: sfsturbo-config
 ---
