--- a/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
+++ b/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
@@ -1,6 +1,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfs-turbo.csi.huaweicloud.com
-provisioner: sfs-turbo.csi.huaweicloud.com
+  name: sfsturbo.csi.huaweicloud.com
+provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
