repair sfs duplicate creation problem

--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -30,6 +30,7 @@ spec:
             - "--csi-address=$(ADDRESS)"
             - "--enable-leader-election"
             - "--leader-election-type=leases"
+            - "--timeout=80s"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
