--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -42,6 +42,7 @@ spec:
           args:
             - "-v=5"
             - "--csi-address=$(ADDRESS)"
+            - "--timeout=3m"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
