--- a/examples/evs-csi-plugin/kubernetes/snapshot/snapshot-class.yaml
+++ b/examples/evs-csi-plugin/kubernetes/snapshot/snapshot-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
-  name: csi-evs-snapclass
+  name: evs-snapshot-class
 driver: evs.csi.huaweicloud.com
 deletionPolicy: Delete
 parameters:
