--- a/deploy/evs-csi-plugin/kubernetes/csi-evs-driver.yaml
+++ b/deploy/evs-csi-plugin/kubernetes/csi-evs-driver.yaml
@@ -1,9 +1,10 @@
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
 metadata:
-  name: evs.csi.openstack.org
+  name: evs.csi.huaweicloud.com
 spec:
   attachRequired: true
   podInfoOnMount: true
   volumeLifecycleModes:
     - Persistent
+    - Ephemeral
