--- a/examples/evs-csi-plugin/kubernetes/block/pod.yaml
+++ b/examples/evs-csi-plugin/kubernetes/block/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test-block
+  name: test-evs-block-nginx
 spec:
   containers:
     - image: nginx
@@ -16,5 +16,5 @@ spec:
   volumes:
     - name: csi-data
       persistentVolumeClaim:
-        claimName: csi-pvc-evs-block
+        claimName: evs-block-pvc
         readOnly: false
