--- a/examples/evs-csi-plugin/kubernetes/ephemeral/sc.yaml
+++ b/examples/evs-csi-plugin/kubernetes/ephemeral/sc.yaml
@@ -1,9 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: evs-sc
+  name: scratch-storage-class
 provisioner: evs.csi.huaweicloud.com
-allowVolumeExpansion: true
 parameters:
   type: SSD
-reclaimPolicy: Delete
