--- a/examples/evs-csi-plugin/kubernetes/normal/pvc.yaml
+++ b/examples/evs-csi-plugin/kubernetes/normal/pvc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: csi-pvc-evs-shareable.ap-southeast-1b
+  name: evs-normal-pvc
 spec:
   accessModes:
     - ReadWriteMany
-  volumeMode: Block
   resources:
     requests:
-      storage: 12Gi
-  storageClassName: evs-share-sc.ap-southeast-1b
+      storage: 10Gi
+  storageClassName: evs-sc
