--- a/examples/evs-csi-plugin/kubernetes/resize/pvc.yaml
+++ b/examples/evs-csi-plugin/kubernetes/resize/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-resize-demo
+  name: evs-normal-resize-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
