--- a/examples/evs-csi-plugin/kubernetes/resize/pvc2.yaml
+++ b/examples/evs-csi-plugin/kubernetes/resize/pvc2.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-block-pvc
+  name: evs-normal-resize-pvc
 spec:
   accessModes:
     - ReadWriteMany
-  volumeMode: Block
   resources:
     requests:
-      storage: 10Gi
+      storage: 20Gi
   storageClassName: evs-sc
