--- a/examples/evs-csi-plugin/kubernetes/snapshot/pvc.yaml
+++ b/examples/evs-csi-plugin/kubernetes/snapshot/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-snapshot-demo
+  name: evs-snapshot-pvc
 spec:
   accessModes:
     - ReadWriteOnce
