--- a/examples/evs-csi-plugin/kubernetes/topology/pvc.yaml
+++ b/examples/evs-csi-plugin/kubernetes/topology/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc1
+  name: evs-topology-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 12Gi
-  storageClassName: topology-aware-standard
+  storageClassName: topology-evs-sc
