feat: sfs secret replace directory

--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -98,6 +98,5 @@ spec:
         - name: socket-dir
           emptyDir: {}
         - name: sfs-config
-          hostPath:
-            path: /etc/sfs/
-            type: Directory
+          secret:
+            secretName: cloud-config
