--- a/examples/sfs-csi-plugin/kubernetes/share/sc.yaml
+++ b/examples/sfs-csi-plugin/kubernetes/share/sc.yaml
@@ -1,6 +1,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfs.csi.huaweicloud.com
+  name: sfs-sc
 provisioner: sfs.csi.huaweicloud.com
 reclaimPolicy: Delete
