--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -24,13 +24,14 @@ spec:
           effect: "NoSchedule"
       containers:
         - name: csi-provisioner
-          image: quay.io/k8scsi/csi-provisioner:v1.4.0
+          image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
           args:
             - "-v=5"
             - "--csi-address=$(ADDRESS)"
-            - "--enable-leader-election"
-            - "--leader-election-type=leases"
             - "--timeout=3m"
+            - "--default-fstype=ext4"
+            - "--extra-create-metadata"
+            - "--leader-election=true"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -38,11 +39,12 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-attacher
-          image: quay.io/k8scsi/csi-attacher:v2.0.0
+          image: k8s.gcr.io/sig-storage/csi-attacher:v3.3.0
           args:
             - "-v=5"
             - "--csi-address=$(ADDRESS)"
             - "--timeout=3m"
+            - "--leader-election=true"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -85,10 +87,10 @@ spec:
               name: sfs-config
         - name: liveness-probe
           imagePullPolicy: Always
-          image: quay.io/k8scsi/livenessprobe:v1.1.0
+          image: k8s.gcr.io/sig-storage/livenessprobe:v2.6.0
           args:
             - --csi-address=/csi/csi.sock
-            - --connection-timeout=3s
+            - --probe-timeout=3s
             - --health-port=28888
             - --v=5
           volumeMounts:
@@ -98,6 +100,5 @@ spec:
         - name: socket-dir
           emptyDir: {}
         - name: sfs-config
-          hostPath:
-            path: /etc/sfs/
-            type: Directory
+          secret:
+            secretName: cloud-config
