fix: add sfs turbo csi controller api

--- a/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
+++ b/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
@@ -4,3 +4,6 @@ metadata:
   name: sfsturbo.csi.huaweicloud.com
 provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
+parameters:
+  # shareType is required, should be 'STANDARD' or 'PERFORMANCE', defaults to 'STANDARD'
+  shareType: STANDARD
