--- a/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
+++ b/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfsturbo.csi.huaweicloud.com
+  name: sfsturbo-sc
 provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
