--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
@@ -24,14 +24,14 @@ spec:
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
-          image: quay.io/k8scsi/livenessprobe:v1.1.0
+          image: k8s.gcr.io/sig-storage/livenessprobe:v2.6.0
           args:
             - --csi-address=/csi/csi.sock
-            - --connection-timeout=3s
+            - --probe-timeout=3s
             - --health-port=28889
             - --v=5
         - name: node-driver-registrar
-          image: quay.io/k8scsi/csi-node-driver-registrar:v1.1.0
+          image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0
           args:
             - --csi-address=$(ADDRESS)
             - --kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)
@@ -102,8 +102,7 @@ spec:
             path: /var/lib/kubelet/plugins_registry/
             type: DirectoryOrCreate
           name: registration-dir
-        - hostPath:
-            path: /etc/sfsturbo/
-            type: Directory
+        - secret:
+            secretName: cloud-config
           name: sfsturbo-config
 ---
