fix: add sfs turbo csi controller api (#37)
* fix: add sfs turbo csi controller api

* fix: remove useless function return

* fix: change sfs turbo example yaml

* fix: make the const value top the file

* fix: use common function to get AZ. Judge the max volume size

* fix: upgrade gomod golangsdk version

* fix: sfsturbo init and flush log

--- a/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
+++ b/examples/sfsturbo-csi-plugin/kubernetes/sc.yaml
@@ -1,6 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfsturbo.csi.huaweicloud.com
+  name: sfsturbo-sc
 provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
+parameters:
+  # shareType is required, should be 'STANDARD' or 'PERFORMANCE', defaults to 'STANDARD'
+  shareType: STANDARD
