feat: add sfs turbo nodeserver api

--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-controller.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-controller.yaml
@@ -24,12 +24,14 @@ spec:
           effect: "NoSchedule"
       containers:
         - name: csi-provisioner
-          image: quay.io/k8scsi/csi-provisioner:v1.4.0
+          image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
           args:
             - "-v=5"
             - "--csi-address=$(ADDRESS)"
-            - "--enable-leader-election"
-            - "--leader-election-type=leases"
+            - "--timeout=10m"
+            - "--feature-gates=Topology=true"
+            - "--extra-create-metadata"
+            - "--leader-election=true"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -37,10 +39,12 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-attacher
-          image: quay.io/k8scsi/csi-attacher:v3.1.0
+          image: k8s.gcr.io/sig-storage/csi-attacher:v3.3.0
           args:
             - "-v=5"
             - "--csi-address=$(ADDRESS)"
+            - "--timeout=3m"
+            - "--leader-election=true"
           env:
             - name: ADDRESS
               value: /csi/csi.sock
@@ -48,12 +52,11 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: sfsturbo-csi-plugin
-          image: zhenguo/sfsturbo-csi-plugin:latest
+          image: swr.cn-north-4.myhuaweicloud.com/k8s-csi/sfsturbo-csi-plugin:v0.1.0
           args:
-            - "--v=2"
+            - "--v=5"
             - "--logtostderr"
             - "--endpoint=$(CSI_ENDPOINT)"
-            - "--nodeid=$(NODE_ID)"
             - "--cloud-config=$(CLOUD_CONFIG)"
           ports:
             - containerPort: 28888
@@ -81,12 +84,26 @@ spec:
               name: socket-dir
             - mountPath: /etc/sfsturbo/
               name: sfsturbo-config
+        - name: csi-resizer
+          image: k8s.gcr.io/sig-storage/csi-resizer:v1.3.0
+          args:
+            - "--csi-address=$(ADDRESS)"
+            - "--timeout=3m"
+            - "--handle-volume-inuse-error=false"
+            - "--leader-election=true"
+          env:
+            - name: ADDRESS
+              value: /var/lib/csi/sockets/pluginproxy/csi.sock
+          imagePullPolicy: "IfNotPresent"
+          volumeMounts:
+            - name: socket-dir
+              mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: liveness-probe
           imagePullPolicy: Always
-          image: quay.io/k8scsi/livenessprobe:v1.1.0
+          image: k8s.gcr.io/sig-storage/livenessprobe:v2.6.0
           args:
             - --csi-address=/csi/csi.sock
-            - --connection-timeout=3s
+            - --probe-timeout=3s
             - --health-port=28888
             - --v=5
           volumeMounts:
@@ -96,6 +113,5 @@ spec:
         - name: socket-dir
           emptyDir: {}
         - name: sfsturbo-config
-          hostPath:
-            path: /etc/sfsturbo/
-            type: Directory
+          secret:
+            secretName: cloud-config
