--- a/hack/deploy/evs/csi-evs-node.yaml
+++ b/hack/deploy/evs/csi-evs-node.yaml
@@ -17,6 +17,7 @@ spec:
       serviceAccount: csi-evs-node-sa
       containers:
         - name: evs-driver-registrar
+          imagePullPolicy: IfNotPresent
           image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.4.0
           args:
             - "--v=5"
@@ -31,13 +32,13 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-          imagePullPolicy: "IfNotPresent"
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
             - name: registration-dir
               mountPath: /registration
         - name: liveness-probe
+          imagePullPolicy: IfNotPresent
           image: k8s.gcr.io/sig-storage/livenessprobe:v2.5.0
           args:
             - --csi-address=/csi/csi.sock
@@ -47,7 +48,8 @@ spec:
         - name: evs-csi-plugin
           securityContext:
             privileged: true
-          image: swr.cn-north-4.myhuaweicloud.com/k8s-csi/evs-csi-plugin:v0.1.2
+          image: {{image_url}}
+          imagePullPolicy: Never
           args:
             - /bin/evs-csi-plugin
             - "--v=5"
@@ -58,7 +60,6 @@ spec:
               value: unix://csi/csi.sock
             - name: CLOUD_CONFIG
               value: /etc/evs/cloud-config
-          imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 9808
               name: healthz
