fix the image path

--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -52,9 +52,9 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: sfs-csi-plugin
-          image: docker.io/zhenguo/sfs-csi-plugin:latest
+          image: swr.cn-north-4.myhuaweicloud.com/k8s-csi/sfs-csi-plugin:v0.1.0
           args:
-            - "--v=2"
+            - "--v=5"
             - "--logtostderr"
             - "--endpoint=$(CSI_ENDPOINT)"
             - "--nodeid=$(NODE_ID)"
