feat: add obs documents

--- a/examples/obs-csi-plugin/kubernetes/dynamic/pvc.yaml
+++ b/examples/obs-csi-plugin/kubernetes/dynamic/pvc.yaml
@@ -1,3 +1,4 @@
+# when removing SC or PVC, the bucket resources will be cleared and deleted together.
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -7,5 +8,7 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 5Gi
+      # when the used storage space in a bucket reaches the upper limit of the bucket storage quota,
+      # it will be unable to continue to write data.
+      storage: 5Ti
   storageClassName: obs-sc
