--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,15 +71,14 @@ jobs:
         id: check_module
         shell: bash
         run:
-          ./hack/check-module.sh ${{ github.sha }}
+          ./hack/check-module.sh ${{ github.event.pull_request.head.sha}}
   e2e:
-#    if: ${{ github.repository == 'huaweicloud/huaweicloud-csi-driver' }}
-    if: ${{ needs.before_run_e2e.outputs.skip_e2e == true }}
+    if: ${{ github.repository == 'huaweicloud/huaweicloud-csi-driver' && needs.before_run_e2e.outputs.skip_e2e == 'false' }}
     name: e2e test
     needs: [build, before_run_e2e]
     runs-on: self-hosted
     strategy:
-      max-parallel: 2
+      max-parallel: 3
       matrix:
         k8s: [ 1.20.15, 1.21.13, 1.22.15, 1.23.13, 1.24.7, 1.25.3  ]
     steps:
