--- a/hack/deploy/obs/csi-obs-controller.yaml
+++ b/hack/deploy/obs/csi-obs-controller.yaml
@@ -50,28 +50,14 @@ spec:
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
-        - name: csi-resizer
-          image: k8s.gcr.io/sig-storage/csi-resizer:v1.3.0
-          args:
-            - "--csi-address=$(ADDRESS)"
-            - "--timeout=3m"
-            - "--handle-volume-inuse-error=false"
-            - "--leader-election=true"
-          env:
-            - name: ADDRESS
-              value: /var/lib/csi/sockets/pluginproxy/csi.sock
-          imagePullPolicy: "IfNotPresent"
-          volumeMounts:
-            - name: socket-dir
-              mountPath: /var/lib/csi/sockets/pluginproxy/
-        - name: obs-csi-plugin
+        - name: obs-csi-provisioner
           securityContext:
             privileged: true
             capabilities:
               add: [ "SYS_ADMIN" ]
             allowPrivilegeEscalation: true
           image: {{image_url}}
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           args:
             - "--v=5"
             - "--logtostderr"
@@ -100,7 +86,21 @@ spec:
             - mountPath: /etc/obs/
               name: obs-config
             - name: csi-tool
-              mountPath: /dev/csi-tool
+              mountPath: /var/lib/csi
+        - name: csi-resizer
+          image: k8s.gcr.io/sig-storage/csi-resizer:v1.4.0
+          args:
+            - "--csi-address=$(ADDRESS)"
+            - "--timeout=3m"
+            - "--handle-volume-inuse-error=false"
+            - "--leader-election=true"
+          env:
+            - name: ADDRESS
+              value: /var/lib/csi/sockets/pluginproxy/csi.sock
+          imagePullPolicy: "IfNotPresent"
+          volumeMounts:
+            - name: socket-dir
+              mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: liveness-probe
           imagePullPolicy: Always
           image: k8s.gcr.io/sig-storage/livenessprobe:v2.6.0
@@ -115,10 +115,10 @@ spec:
       volumes:
         - name: csi-tool
           hostPath:
-            path: /dev/csi-tool
+            path: /var/lib/csi
             type: DirectoryOrCreate
         - name: socket-dir
-          emptyDir: { }
+          emptyDir: {}
         - name: obs-config
           secret:
             secretName: cloud-config
