--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,7 +1,7 @@
 name: E2E test
 on:
   pull_request_target:
-    types: [labeled]
+    types: [ labeled ]
   workflow_call:
     # Map the workflow outputs to job outputs
     outputs:
@@ -33,9 +33,9 @@ jobs:
     needs: [ before_run_e2e ]
     runs-on: self-hosted
     strategy:
-      max-parallel: 3
+      max-parallel: 8
       matrix:
-        k8s: [ 1.20.15, 1.21.13, 1.22.15, 1.23.13, 1.24.7, 1.25.9, 1.26.2, 1.27.1 ]
+        k8s: [ "1.20", "1.21", "1.22", "1.23", "1.24", "1.25", "1.26", "1.27" ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -45,18 +45,15 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18.x
-      - name: Install k8s cluster
+      - name: Switch k8s cluster
         run: |
           export CLUSTER_VERSION=${{ matrix.k8s }}
-          ./hack/remove-cluster.sh
-          ./hack/create-cluster.sh ${{ matrix.k8s }}
+          ./hack/switch-cluster.sh ${{ matrix.k8s }}
       - name: Run e2e
         shell: bash {0}
         run: |
           export ARTIFACTS_PATH=${{ github.workspace }}/e2e-logs/${{ matrix.k8s }}
           ./hack/run-e2e-test.sh "${{ needs.before_run_e2e.outputs.labels }}"
-      - name: Remove k8s cluster
-        run: ./hack/remove-cluster.sh
       - name: Upload logs
         if: always()
         uses: actions/upload-artifact@v3
