enable hostNetwork to support pod to obtain ECS metadata information

--- a/deploy/evs-csi-plugin/kubernetes/csi-evs-node.yaml
+++ b/deploy/evs-csi-plugin/kubernetes/csi-evs-node.yaml
@@ -15,6 +15,7 @@ spec:
       tolerations:
         - operator: Exists
       serviceAccount: csi-evs-node-sa
+      hostNetwork: true
       containers:
         - name: evs-driver-registrar
           image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.4.0
