--- a/deploy/obs-csi-plugin/kubernetes/csi-obs-node.yaml
+++ b/deploy/obs-csi-plugin/kubernetes/csi-obs-node.yaml
@@ -20,6 +20,7 @@ spec:
       tolerations:
         - operator: "Exists"
       hostPID: true
+      hostNetwork: true
       containers:
         - name: liveness-probe
           volumeMounts:
