--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-node.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-node.yaml
@@ -19,6 +19,7 @@ spec:
       priorityClassName: system-node-critical
       tolerations:
         - operator: "Exists"
+      hostNetwork: true
       containers:
         - name: liveness-probe
           volumeMounts:
