--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-controller.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-controller.yaml
@@ -14,6 +14,7 @@ spec:
         app: csi-sfsturbo-controller
     spec:
       serviceAccountName: csi-sfsturbo-controller-sa
+      hostNetwork: true
       nodeSelector:
         kubernetes.io/os: linux
       priorityClassName: system-cluster-critical
