--- a/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
+++ b/deploy/sfs-csi-plugin/kubernetes/csi-sfs-controller.yaml
@@ -22,6 +22,7 @@ spec:
           operator: "Equal"
           value: "true"
           effect: "NoSchedule"
+      hostNetwork: true
       containers:
         - name: csi-provisioner
           image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
