--- a/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
+++ b/deploy/sfsturbo-csi-plugin/kubernetes/csi-sfsturbo-node.yaml
@@ -14,6 +14,7 @@ spec:
         app: csi-sfsturbo-node
     spec:
       serviceAccountName: csi-sfsturbo-node-sa
+      hostNetwork: true
       nodeSelector:
         kubernetes.io/os: linux
       priorityClassName: system-node-critical
