feat(obs): add encryption of OBS bucket

--- a/cluster/images/obs-csi-plugin/Dockerfile
+++ b/cluster/images/obs-csi-plugin/Dockerfile
@@ -5,16 +5,13 @@ LABEL description="HuaweiCloud CSI Plugin"
 
 WORKDIR /obs-csi
 
-COPY obsfs_CentOS7.6_amd64.tar.gz ./
-COPY obsfs_Ubuntu16.04_amd64.tar.gz ./
 COPY entrypoint.sh entrypoint.sh
 COPY nsenter /nsenter
 COPY csi-connector-server ./
 COPY csi-connector.service ./
 COPY obs-csi-plugin obs-csi-plugin
-COPY install_obsfs.sh ./
+COPY install_s3fs.sh ./
 COPY stop-server.sh ./
-COPY huaweicloud-obs-obsfs.tar.gz ./
 
 RUN chmod +x obs-csi-plugin
 RUN chmod +x entrypoint.sh
